Added deleting notes and updated add note response
