# src/interfaces/requests/delete_note_request_body/delete_note_request_body.ts
@@ -1,0 +1,3 @@
+export interface DeleteNoteReqBody {
+  noteId: string;
+}
