# src/interfaces/responses/add_notes_response/add_notes_response.ts
@@ -1,0 +1,6 @@
+import { INoteData } from "../../note/note";
+import { Res } from "../response";
+
+export interface AddNotesRes extends Res {
+  data?: INoteData;
+}
